# agent_migration

./: .env  agent-s-486920-13a2966d5447.json  download_snowflake.py  gcs_upload.py  main.py  pyproject.toml  upload_snowflake.py
agent_workspace/: Test1.docx  test_upload.txt
src/: agent.py
src/tools/: delete_ws.py  download_sf.py  get_info.py  list_sf_files.py  list_ws_files.py  read_text_file.py  rename_file.py  upload_gcs.py
